added good stuff

--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
 <html>
-<title>Helloa</title>
-<body>
+  <head>
+    <title>
+      Helloa! Wogyanfrshenlaiygredawinty!
+    </title>
+  </head>
+  <body>
 
-<h1>hi</h1>
-<p>hi</p>
+    <h1>This is enormous</h1>
+    <h2>This is huge</h2>
+    <h3>This is large</h3>
+    <h4>This is smaller</h4>
+    <h5>This is tiny</h5>
+    <h6>This is miniscule</h6>
+    Well, not really.
 
-</body>
+    Upcoming: Liszt (List)
+    <br>
+    lol
+    <br>
+    Unordered:
+    <ul> Ul stands for unordered list
+      <li>Something</li> Li stands for list item
+      <li>Another thing</li>
+      <li>Something else</li>
+    </ul>
+    Ordered:
+    <ol> Ol stands for ordered list
+      <li>Something</li>
+      <li>Another thing</li>
+      <li>Something else</li>
+    </ol>
+
+    <br>
+    <img src="download.png" alt="look!" height="200">
+    Alternatively, this always fills 20% of the whole page:
+    <img src="download.png" alt="look!" width="20%">
+
+    <p> tables! </p>
+
+    <table border="1px">
+      <tr>
+        <th>Element</th>
+        <th>Atomic Number</th>
+        <th>Date of Discovery</th>
+      </tr>
+      <tr>
+        <td>Hydrogen</td>
+        <td>1</td>
+        <td>1766</td>
+      </tr>
+        <td>Helium</td>
+        <td>2</td>
+        <td>1868</td>
+      <tr>
+        <td>Lithium</td>
+        <td>3</td>
+        <td>1817</td>
+    </table>
+
+    Form!
+    <form>
+      <input type="text" placeholder="Full Name" name="Name">
+      <button>Submit</button>
+    </form>
+
+
+
+  </body>
 </html>
