added good stuff

--- a/another.html
+++ b/another.html
@@ -1,1 +1,29 @@
-sad
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      p{
+        color: coral;
+        text-align: center;
+      }
+    </style>
+    <title>
+      Helloa! Wogyanfrshenlaiygredawinty!
+    </title>
+  </head>
+  <body>
+
+    <h2 style="color:orchid;text-align:center;">Welcome! You may not see this message...</h2>
+    <h3 style="color:#3333AA;text-align:center;">I'm HEXing you.</h3>
+
+    Look at the "head" bit.
+    <p>We are styled using the style tag.</p>
+    <p>And that helps declutter code. </p>
+    <p>This is the colour "coral". </p>
+    <p>All paragraphs are styled the same way!</p>
+    <p>This saves soooooo much time</p>
+
+
+
+  </body>
+</html>
