--- a/CSSStyling.html
+++ b/CSSStyling.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Stylin' to the clouds
+    </title>
+    <link rel="stylesheet"href="styles.css">
+  </head>
+  <body>
+    <h1>Something that is very un-flashy</h1>
+    <div>
+      This is utterly ugly.
+      <br>Ain't it?
+    </div>
 
+    <p>The better table...</p>
+
+    <table>
+      <tr>
+        <th>Element</th>
+        <th>Atomic Number</th>
+        <th>Date of Discovery</th>
+      </tr>
+      <tr>
+        <td>Hydrogen</td>
+        <td>1</td>
+        <td>1766</td>
+      </tr>
+        <td>Helium</td>
+        <td>2</td>
+        <td>1868</td>
+      <tr>
+        <td>Lithium</td>
+        <td>3</td>
+        <td>1817</td>
+    </table>
+
+    <p id = "top">
+      Top<span class = "name">Top</span>Top
+    </p>
+    <p id="middle">
+      Middle<span class = "name">Middle</span>Middle
+    </p>
+    <p id="bottom">
+      Bottom<span class = "name">Bottom</span>Bottom
+    </p>
+  </body>
+</html>
